bk_ida/gccida/g3/gen_split_954
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_954/src/insn-emit.c:8652:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_lowpart( ( machine_mode)( !v2 + 4), v3); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_954/src/insn-emit.c:8656:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_lowpart( ( machine_mode)( !v2 + 4), v5); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_954/src/insn-emit.c:8660:21: error: use of undeclared identifier 'machine_mode'
v8 = gen_lowpart( ( machine_mode)( !v2 + 4), v7); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_954/src/insn-emit.c:8666:31: error: use of undeclared identifier 'machine_mode'
v12 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( !v2 + 4), v10, v9); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_954/src/insn-emit.c:8667:31: error: use of undeclared identifier 'machine_mode'
v13 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v12, v11); 
                              ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_954/src/obj/insn-emit.o] Error 1
